add 'protect' field to create and update course endpoints
